frontend/deployments/production/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orchestra-frontend-ingress-production
  namespace: orchestra-space
  annotations:
    kubernetes.io/ingress.global-static-ip-name: orchestra-frontend-ingress-ip
    # UPDATE THIS: Change to your SSL certificate name
    ingress.gcp.kubernetes.io/pre-shared-cert: orchestra-ssl-cert
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: orchestra-frontend-production
      port:
        number: 443
